<resources>
    <string name="app_name">BTProject</string>
    <string name="enter_command">Enter command</string>
    <string name="send">Send</string>
    <string name="connection_status">Not Connected</string>
    <string name="n_device">No Device</string>
    <string name="off">Off</string>
    <string name="no_bluetooth">Device has no bluetooth</string>
    <string name="device_no_bluetooth">Sorry, this device don\'t have bluetooth</string>
    <string name="bt_connected">Connected</string>
    <string name="bt_on">On</string>
    <string name="bt_is_off">Bluetooth is off, please turn on bluetooth</string>
    <string name="turn_on">Turn On</string>
    <string name="bt_disconnected">Not Connected</string>
    <string name="no_device">No device</string>
    <string name="select_device">Select Device</string>
    <string name="available_devices">Available devices</string>
    <string name="paired_devices">Paired devices</string>
    <string name="select">Select</string>
    <string name="device_name">Device name</string>
    <string name="device_mac">Mac Address</string>
</resources>
