<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/actBg"
        tools:context=".MainActivity"
        android:id="@+id/main_cl">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/topSect"
            android:padding="5dp"
            app:layout_constraintTop_toTopOf="parent">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_margin="10dp"
                android:src="@drawable/red_dot"
                android:id="@+id/bt_dot"
                android:layout_centerVertical="true"
                android:layout_marginStart="3dp"
                android:layout_toLeftOf="@id/txt_connection_status"
                android:layout_toStartOf="@id/txt_connection_status"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:id="@+id/txt_connection_status"
                android:text="@string/connection_status" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txt_device_name"
                android:text="@string/n_device"
                android:layout_below="@id/txt_connection_status"
                android:layout_centerHorizontal="true"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txt_off"
                    android:text="@string/off"
                    android:textColor="@android:color/holo_red_light"
                    android:layout_marginRight="5dp"/>
                <androidx.appcompat.widget.SwitchCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/bt_switch" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txt_on"
                    android:text="@string/bt_on"
                    android:textColor="@android:color/darker_gray"
                    android:layout_marginStart="5dp"/>
            </LinearLayout>



        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/bottomSect"
            app:layout_constraintBottom_toBottomOf="parent"
            android:padding="5dp">

            <EditText
                android:id="@+id/txt_command"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:lines="3"
                android:hint="@string/enter_command"
                android:layout_weight="4"
                android:background="@drawable/edittext_bg_orange"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:id="@+id/btn_command"
                android:text="@string/send"/>
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
